--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,58 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>User Preferences &mdash; Colorlib Website Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
-    <link rel="stylesheet" href="/static/fonts/icomoon/style.css">
-
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/magnific-popup.css">
-    <link rel="stylesheet" href="/static/css/jquery-ui.css">
-    <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
-
-    <link rel="stylesheet" href="/static/css/aos.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-  </head>
-  <body>
-
+{%extends 'base.html'%}
+{%block content%}
   <div class="site-wrap">
 
-    <div class="site-mobile-menu">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
-
-    <header class="site-navbar py-4" role="banner">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-3">
-            <h1 class="site-logo"><a href="index.html" class="h2">Podcast<span class="text-primary">.</span> </a></h1>
-          </div>
-          <div class="col-9">
-            <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
-                <div class="d-block d-lg-none ml-md-0 mr-auto"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-                <ul class="site-menu js-clone-nav d-none d-lg-block">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="preferences.html" class="active">Preferences</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="login-register.html">Login / Register</a></li>
-                </ul>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(/static/images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
@@ -69,7 +18,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-md-7 mb-5">
-            <form action="#" method="post" class="bg-white">
+            <form action="{{url_for('views.preferences')}}" method="put" class="bg-white" enctype="multipart/form-data" >
+             {{form.csrf_token()}}
               <div class="">
                 <h3>Profile Settings</h3>
 
@@ -77,13 +27,12 @@
                 <!-- Avatar Section -->
             <div class="form-group row">
               <div class="col-md-12">
-                <label for="c_avatar" class="text-black">Avatar</label>
                 <div class="d-flex align-items-center">
                   <!-- Bootstrap Avatar -->
-                  <img src="https://via.placeholder.com/150" alt="User Avatar" class="rounded-circle" width="130" height="130">
+                  <img  id="avatar_img" src="{{current_user.profile_image_url if current_user.profile_image_url else ''}}" alt="User Avatar" class="rounded-circle" width="130" height="130">
                            <div class="custom-file ml-3">
-                        <input type="file" class="custom-file-input" id="c_avatar" name="c_avatar" accept="image/*">
-                        <label class="custom-file-label" for="c_avatar">Choose file</label>
+                        {{form.avatar(class="custom-file-input", id="c_avatar", required=True, accept="image/*")}}
+                               <label class="custom-file-label" >Choose file</label>
                             </div>
                 </div>
               </div>
@@ -92,56 +41,21 @@
 
                 <div class="form-group row">
                   <div class="col-md-6">
-                    <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="c_fname" name="c_fname" value="John">
-                  </div>
-                  <div class="col-md-6">
-                    <label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="c_lname" name="c_lname" value="Doe">
+                    <label class="text-black">Username</label>
+                    {{form.username(class="form-control", id="c_username", required=False)}}
                   </div>
                 </div>
                 <div class="form-group row">
                   <div class="col-md-12">
-                    <label for="c_email" class="text-black">Email <span class="text-danger">*</span></label>
-                    <input type="email" class="form-control" id="c_email" name="c_email" value="john.doe@example.com">
+                    <label class="text-black">Email</label>
+                  {{form.email(class="form-control", id="c_email", required=False)}}
                   </div>
                 </div>
 
-                <h3>Notification Preferences</h3>
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <label for="email_notifications" class="text-black">Email Notifications</label>
-                    <select class="form-control" id="email_notifications" name="email_notifications">
-                      <option value="enabled">Enabled</option>
-                      <option value="disabled">Disabled</option>
-                    </select>
-                  </div>
-                </div>
 
                 <div class="form-group row">
                   <div class="col-md-12">
-                    <label for="push_notifications" class="text-black">Push Notifications</label>
-                    <select class="form-control" id="push_notifications" name="push_notifications">
-                      <option value="enabled">Enabled</option>
-                      <option value="disabled">Disabled</option>
-                    </select>
-                  </div>
-                </div>
-
-                <h3>Subscription Preferences</h3>
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <label for="subscription_type" class="text-black">Subscription Type</label>
-                    <select class="form-control" id="subscription_type" name="subscription_type">
-                      <option value="free">Free</option>
-                      <option value="premium">Premium</option>
-                    </select>
-                  </div>
-                </div>
-
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <input type="submit" class="btn btn-primary btn-lg" value="Save Preferences">
+                      <button type="submit" class="btn btn-primary btn-lg">Save Preferences</button>
                   </div>
                 </div>
               </div>
@@ -151,62 +65,54 @@
           <div class="col-md-5">
             <div class="p-4 mb-3 bg-white">
               <h3 class="mb-4">Account Details</h3>
-              <p><strong>Username:</strong> john_doe</p>
-              <p><strong>Subscription Status:</strong> Premium</p>
-              <p><strong>Email:</strong> john.doe@example.com</p>
-              <p><strong>Account Created:</strong> January 1, 2020</p>
+              <p><strong>Username:</strong> {{current_user.username}}</p>
+              <p><strong>Subscription Status:</strong> Free</p>
+              <p><strong>Email:</strong> {{current_user.email}}</p>
+              <p><strong>Account Created:</strong> {{current_user.created_at.date()}}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            <h3>About Us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium animi, odio beatae aspernatur natus recusandae quasi magni eum voluptatem nam!</p>
-          </div>
-          <div class="col-lg-3 mx-auto">
-            <h3>Navigation</h3>
-            <ul class="list-unstyled">
-              <li><a href="#">Podcasts</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h3>Subscribe</h3>
-            <form action="#" class="form-subscribe">
-              <input type="email" class="form-control mb-3" placeholder="Enter Email">
-              <input type="submit" class="btn btn-primary" value="Subscribe">
-            </form>
-          </div>
-        </div>
-
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
   </div>
+{%endblock%}
 
-  <script src="/static/js/jquery-3.3.1.min.js"></script>
-  <script src="/static/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="/static/js/jquery-ui.js"></script>
-  <script src="/static/js/popper.min.js"></script>
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script src="/static/js/owl.carousel.min.js"></script>
-  <script src="/static/js/mediaelement-and-player.min.js"></script>
-  <script src="/static/js/aos.js"></script>
-  <script src="/static/js/main.js"></script>
 
-  </body>
-</html>
+{%block otherscripts%}
+<script>
+ function handleFileChange(inputId, outputId, isAudio = false) {
+    document.getElementById(inputId).addEventListener('change', function (e) {
+        const file = e.target.files[0];
+
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = function () {
+                console.log(reader.result);
+                const outputElement = document.getElementById(outputId);
+                if (isAudio) {
+                    outputElement.src = 'https://img.icons8.com/ios/50/000000/audio-wave.png';
+                } else {
+                    outputElement.src = reader.result;
+                }
+            };
+            reader.readAsDataURL(file);
+        }
+    });
+}
+
+// Call the function for the image input
+handleFileChange('c_avatar', 'avatar_img');
+
+    document.addEventListener('DOMContentLoaded', () => {
+    const inputs = document.querySelectorAll('.custom-file-input');
+    inputs.forEach(input => {
+        input.addEventListener('change', (event) => {
+            const fileName = event.target.files[0]?.name || "Choose file";
+            const label = event.target.nextElementSibling;
+            label.textContent = fileName;
+        });
+    });
+});
+</script>
+{%endblock%}
