--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="/static/fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+  rel="stylesheet"
+/>
+
   <link rel="stylesheet" href="/static/css/magnific-popup.css">
   <link rel="stylesheet" href="/static/css/jquery-ui.css">
   <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
