--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,111 +1,103 @@
- <div class="site-mobile-menu">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
+<div class="site-mobile-menu">
+  <div class="site-mobile-menu-header">
+    <div class="site-mobile-menu-close mt-3">
+      <span class="icon-close2 js-menu-toggle"></span>
     </div>
+  </div>
+  <div class="site-mobile-menu-body"></div>
+</div>
 
-
-    <header class="site-navbar py-4" role="banner">
-
-      <div class="container">
-        <div class="row align-items-center">
-
-
-          <div class="col-3">
-            <h1 class="site-logo"><a href="{{ url_for('views.index') }}" class="h2">Shortcast<span class="text-primary">.</span> </a></h1>
-          </div>
-          <div class="col-9">
-            <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
-
-
-
-              <div class="d-block d-lg-none ml-md-0 mr-auto"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
-              <ul class="site-menu js-clone-nav d-none d-lg-block">
-                <li class="{% if request.endpoint == 'views.index' %}active{% endif %}">
-                  <a href="{{ url_for('views.index') }}">Home</a>
-                </li>
-
-             <li class="has-children {% if request.endpoint in ['views.create_podcast', 'views.create_episode','views.create_playlist'] %}active{% endif %}">
-                <a href="#">Create</a>
-                 <ul class="dropdown arrow-top">
-                    <li class="{% if request.endpoint == 'views.create_podcast' %}active{% endif %}">
-                        <a href="{{ url_for('views.create_podcast') }}">Podcast</a>
-                    </li>
-                     <li class="{% if request.endpoint == 'views.create_episode' %}active{% endif %}">
-                        <a href="{{ url_for('views.create_episode') }}">Episode</a>
-                    </li>
-                      <li class="{%if request.endpoint=='views.create_playlist'%}active{%endif%}">
-                          <a href="{{ url_for('views.create_playlist') }}">Playlist</a>
-                      </li>
-                </ul>
-            </li>
-
-
-
-
-
-
-
-
-
-               <li class="has-children {% if request.endpoint in ['views.podcast', 'views.live_podcast','views.user_playlists'] %}active{% endif %}">
-                <a href="#">Browse</a>
-                 <ul class="dropdown arrow-top">
-                    <li class="{% if request.endpoint == 'views.podcast' %}active{% endif %}">
-                        <a href="{{ url_for('views.podcast') }}">Podcast</a>
-                    </li>
-                     <li class="{% if request.endpoint == 'views.live_podcast' %}active{% endif %}">
-                        <a href="{{ url_for('views.live_podcast') }}">Live Podcast</a>
-                    </li>
-
-                      <li class="{% if request.endpoint == 'views.user_playlists' %}active{% endif %}">
-                        <a href="{{ url_for('views.user_playlists') }}">My Playlist</a>
-                    </li>
-                </ul>
-            </li>
-                    <li class="has-children {% if request.endpoint in ['views.about', 'views.contact'] %}active{% endif %}">
-                <a href="#">Info</a>
-                 <ul class="dropdown arrow-top">
-                    <li class="{% if request.endpoint == 'views.about' %}active{% endif %}">
-                        <a href="{{ url_for('views.about') }}">About</a>
-                    </li>
-                     <li class="{% if request.endpoint == 'views.contact' %}active{% endif %}">
-                        <a href="{{ url_for('views.contact') }}">Contact</a>
-                    </li>
-                </ul>
-            </li>
-                  {% if current_user.is_authenticated %}
-
-                  <a href="{{url_for('views.preferences')}}">
-                      <img src="{{ current_user.profile_image_url|safe }}" alt="User Avatar" class="rounded-circle" width="60" height="60">
-                  </a>
-                      <li class="{% if request.endpoint == 'views.logout' %}active{% endif %}">
-                        <a href="{{ url_for('views.logout') }}">Logout</a>
-                        </li>
-                  {% else %}
-                <li class="{% if request.endpoint == 'views.login' %}active{% endif %}"><a href="{{ url_for('views.login') }}">Login / Register</a></li>
-
-
-                  {% endif %}
-
-
-
-
-              </ul>
-
-
-            </nav>
-
-
-          </div>
-
-        </div>
+<header class="site-navbar py-4" role="banner">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-3">
+        <h1 class="site-logo">
+          <a href="{{ url_for('views.index') }}" class="h2 text-dark" style="color: #333; font-weight: bold; font-size: 24px; text-decoration: none; transition: color 0.3s ease;">
+            Shortcast<span class="text-primary">.</span>
+          </a>
+        </h1>
       </div>
 
-    </header>
+<!--        Navigation Section-->
 
+      <div class="col-9">
+        <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
+          <div class="d-block d-lg-none ml-md-0 mr-auto">
+            <a href="#" class="site-menu-toggle js-menu-toggle text-black">
+              <span class="icon-menu h3"></span>
+            </a>
+          </div>
+<!--main navigaion links-->
+          <ul class="site-menu js-clone-nav d-none d-lg-block" style="list-style: none; margin: 0; padding: 0;">
+            <!-- Home -->
+            <li class="{% if request.endpoint == 'views.index' %}active{% endif %}">
+              <a href="{{ url_for('views.index') }}">Home</a>
+            </li>
 
+            <!-- Create -->
+            <li class="has-children {% if request.endpoint in ['views.create_podcast', 'views.create_episode', 'views.create_playlist'] %}active{% endif %}">
+              <a href="#">Create</a>
+              <ul class="dropdown arrow-top">
+                <li class="{% if request.endpoint == 'views.create_podcast' %}active{% endif %}">
+                  <a href="{{ url_for('views.create_podcast') }}">Podcast</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.create_episode' %}active{% endif %}">
+                  <a href="{{ url_for('views.create_episode') }}">Episode</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.create_playlist' %}active{% endif %}">
+                  <a href="{{ url_for('views.create_playlist') }}">Playlist</a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- Browse -->
+            <li class="has-children {% if request.endpoint in ['views.podcast', 'views.live_podcast', 'views.user_playlists'] %}active{% endif %}">
+              <a href="#">Browse</a>
+              <ul class="dropdown arrow-top">
+                <li class="{% if request.endpoint == 'views.podcast' %}active{% endif %}">
+                  <a href="{{ url_for('views.podcast') }}">Podcast</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.live_podcast' %}active{% endif %}">
+                  <a href="{{ url_for('views.live_podcast') }}">Live Podcast</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.user_playlists' %}active{% endif %}">
+                  <a href="{{ url_for('views.user_playlists') }}">My Playlist</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.user_podcasts' %}active{% endif %}">
+                  <a href="{{ url_for('views.user_podcasts') }}">My Podcast</a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- Info -->
+            <li class="has-children {% if request.endpoint in ['views.about', 'views.contact'] %}active{% endif %}">
+              <a href="#">Info</a>
+              <ul class="dropdown arrow-top">
+                <li class="{% if request.endpoint == 'views.about' %}active{% endif %}">
+                  <a href="{{ url_for('views.about') }}">About</a>
+                </li>
+                <li class="{% if request.endpoint == 'views.contact' %}active{% endif %}">
+                  <a href="{{ url_for('views.contact') }}">Contact</a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- User Authentication -->
+            {% if current_user.is_authenticated %}
+              <a href="{{url_for('views.preferences')}}">
+                <img src="{{ current_user.profile_image_url|safe }}" alt="User Avatar" class="rounded-circle" width="60" height="60">
+              </a>
+              <li class="{% if request.endpoint == 'views.logout' %}active{% endif %}">
+                <a href="{{ url_for('views.logout') }}">Logout</a>
+              </li>
+            {% else %}
+              <li class="{% if request.endpoint == 'views.login' %}active{% endif %}">
+                <a href="{{ url_for('views.login') }}">Login</a>
+              </li>
+            {% endif %}
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
