--- a/app/templates/podcastlist.html
+++ b/app/templates/podcastlist.html
@@ -80,6 +80,7 @@
         </div>
 
         <div class="row">
+          {%if podcasts%}
           {% for podcast in podcasts %}
             <div class="col-md-4">
               <div class="d-block podcast-entry bg-white mb-5" data-aos="fade-up">
@@ -108,6 +109,20 @@
               </div>
             </div>
           {% endfor %}
+          {%else%}
+
+       <div class="col-md-12 text-center py-5">
+    <div class="alert alert-warning shadow-sm p-4" role="alert">
+        <h3 class="text-danger mb-3">No Podcasts Found</h3>
+        <p class="text-muted">It seems like we couldn't find any podcasts matching your criteria. Try adjusting your filters or come back later for new content!</p>
+        <a href="{{ url_for('views.podcast') }}" class="btn btn-primary mt-3">
+            Explore All Podcasts
+        </a>
+    </div>
+</div>
+
+
+          {%endif%}
         </div>
 
       </div>
@@ -132,6 +147,7 @@
                 {% endif %}
 
                 <!-- Page Number Links -->
+                {%if pagination%}
                 {% for page_num in pagination.iter_pages() %}
                   {% if page_num %}
                     {% if page_num == pagination.page %}
@@ -147,6 +163,7 @@
                     <li><span>...</span></li>
                   {% endif %}
                 {% endfor %}
+                {%endif%}
 
                 <!-- Next Page Link -->
                 {% if pagination.has_next %}
